--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,14 @@
   color: #61dafb;
 }
 
+
+.centered {
+  height: 100vh; /* Magic here */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
