style + home changes

--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@
 .home-paragraph {
   margin: 100px;
   padding: 1em;
-  font-weight: bold;
+  font-weight: bolder;
   font-size: large;
   background-color: white;
 }
