--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 400px;
+  margin-left: 425px;
+  margin-right: 100px;
   width: 400px;
 }
 
