--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,10 @@
 .home-paragraph {
   margin: 100px;
   padding: 1em;
-  font-weight: bolder;
+  font-weight: bold;
   font-size: large;
-  background-color: white;
+  background-color: rgb(250, 246, 0);
+  color: rgb(147, 147, 221);
 }
 
 .centered {
@@ -60,4 +61,8 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.footer {
+  font-weight: bold;
 }
