--- a/src/App.css
+++ b/src/App.css
@@ -49,7 +49,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: whitesmoke;
+  color: white;
+  font-size: x-large;
 }
 
 .home-div {
@@ -75,4 +76,5 @@
 .footer {
   font-weight: bold;
   color: whitesmoke;
+  font-size: large;
 }
